--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.3",
+    "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-community/slider": "^4.5.3",
+    "@react-native-picker/picker": "^2.8.1",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.4.1",
+    "@uynguyen505/react-native-wheel-picker": "^1.2.19",
     "expo": "^48.0.11",
     "expo-linear-gradient": "^12.1.2",
     "expo-status-bar": "~1.4.4",
@@ -20,13 +25,17 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-calendars": "^1.1307.0",
     "react-native-heroicons": "^3.2.0",
     "react-native-paper": "^5.12.5",
+    "react-native-picker-select": "^9.3.1",
     "react-native-ratings": "^8.1.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-star-rating": "^1.1.0",
     "react-native-svg": "13.4.0",
+    "react-native-wheel-picker": "^1.2.0",
+    "react-native-wheel-picker-expo": "^0.5.4",
     "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
