--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-calendars": "^1.1307.0",
     "react-native-gesture-handler": "^2.19.0",
     "react-native-heroicons": "^3.2.0",
+    "react-native-image-picker": "^7.1.2",
     "react-native-paper": "^5.12.5",
     "react-native-picker-select": "^9.3.1",
     "react-native-ratings": "^8.1.0",
