--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-calendars": "^1.1307.0",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.19.0",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-heroicons": "^3.2.0",
+    "react-native-image-cache": "^0.0.8",
     "react-native-image-picker": "^7.1.2",
     "react-native-paper": "^5.12.5",
     "react-native-picker-select": "^9.3.1",
@@ -38,7 +41,8 @@
     "react-native-svg": "15.2.0",
     "react-native-wheel-picker": "^1.2.0",
     "react-native-wheel-picker-expo": "^0.5.4",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
