--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@expo/vector-icons": "^14.0.3",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/slider": "4.5.2",
-    "@react-native-picker/picker": "2.7.5",
+    "@react-native-picker/picker": "^2.8.1",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.9.12",
