--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-wheel-picker": "^1.2.0",
     "react-native-wheel-picker-expo": "^0.5.4",
     "tailwindcss": "^3.2.7",
+    "update": "^0.7.4",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
