--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-screens": "3.31.1",
     "react-native-star-rating": "^1.1.0",
     "react-native-svg": "15.2.0",
+    "react-native-video": "^6.6.2",
     "react-native-wheel-picker": "^1.2.0",
     "react-native-wheel-picker-expo": "^0.5.4",
     "tailwindcss": "^3.2.7",
