Add video support for exercises and upload videos and thumbnails for exercises
Signed-off-by: Natan Borisov <nborisov@apple.com>

--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
     "@react-navigation/stack": "^6.4.1",
     "@uynguyen505/react-native-wheel-picker": "^1.2.19",
     "expo": "^51.0.34",
+    "expo-av": "~14.0.7",
+    "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~1.12.1",
+    "expo-video-thumbnails": "~8.0.0",
     "firebase": "^9.23.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-calendars": "^1.1307.0",
+    "react-native-create-thumbnail": "^2.0.0",
     "react-native-elements": "^3.4.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.19.0",
@@ -41,8 +45,10 @@
     "react-native-star-rating": "^1.1.0",
     "react-native-svg": "15.2.0",
     "react-native-video": "^6.6.2",
+    "react-native-video-duration": "^0.1.2",
     "react-native-wheel-picker": "^1.2.0",
     "react-native-wheel-picker-expo": "^0.5.4",
+    "rn-media-meta": "^0.0.11",
     "tailwindcss": "^3.2.7",
     "update": "^0.7.4",
     "uuid": "^10.0.0"
