--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "react-native-screens": "3.31.1",
     "react-native-star-rating": "^1.1.0",
     "react-native-svg": "15.2.0",
+    "react-native-swipe-list-view": "^3.2.9",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.6.2",
     "react-native-video-duration": "^0.1.2",
     "react-native-wheel-picker": "^1.2.0",
