--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-heroicons": "^3.2.0",
     "react-native-image-cache": "^0.0.8",
     "react-native-image-picker": "^7.1.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.5",
     "react-native-picker-select": "^9.3.1",
     "react-native-ratings": "^8.1.0",
