--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react-native": "0.74.5",
     "react-native-calendars": "^1.1307.0",
     "react-native-create-thumbnail": "^2.0.0",
+    "react-native-custom-picker": "^0.4.0",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "^3.4.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.19.0",
