--- a/package.json
+++ b/package.json
@@ -12,15 +12,12 @@
     "@expo/vector-icons": "^14.0.3",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/slider": "4.5.2",
-    "@react-native-picker/picker": "^2.8.1",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.4.1",
-    "@uynguyen505/react-native-wheel-picker": "^1.2.19",
     "expo": "^51.0.34",
     "expo-av": "~14.0.7",
-    "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "expo-video-thumbnails": "~8.0.0",
@@ -28,35 +25,13 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-calendars": "^1.1307.0",
-    "react-native-create-thumbnail": "^2.0.0",
-    "react-native-custom-picker": "^0.4.0",
-    "react-native-dropdown-picker": "^5.4.6",
-    "react-native-elements": "^3.4.3",
-    "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "^2.19.0",
-    "react-native-get-random-values": "^1.11.0",
-    "react-native-heroicons": "^3.2.0",
-    "react-native-image-cache": "^0.0.8",
-    "react-native-image-picker": "^7.1.2",
-    "react-native-linear-gradient": "^2.8.3",
-    "react-native-paper": "^5.12.5",
-    "react-native-picker-select": "^9.3.1",
-    "react-native-ratings": "^8.1.0",
+    "react-native-purchases": "^8.2.7",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-star-rating": "^1.1.0",
     "react-native-svg": "15.2.0",
-    "react-native-swipe-list-view": "^3.2.9",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-video": "^6.6.2",
-    "react-native-video-duration": "^0.1.2",
-    "react-native-wheel-picker": "^1.2.0",
-    "react-native-wheel-picker-expo": "^0.5.4",
-    "rn-media-meta": "^0.0.11",
-    "tailwindcss": "^3.2.7",
-    "update": "^0.7.4",
-    "uuid": "^10.0.0"
+    "tailwindcss": "^3.3.2",
+    "update": "^0.7.4"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
