--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -109,9 +109,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.nborisov.appui'
+    namespace 'com.apple.esfit'
     defaultConfig {
-        applicationId 'com.nborisov.appui'
+        applicationId 'com.apple.esfit'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
