Add relevant upload keys for the app
Signed-off-by: Natan Borisov <nborisov@apple.com>

--- a/app.json
+++ b/app.json
@@ -15,14 +15,16 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "buildNumber": "1"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.apple.esfit"
+      "package": "com.apple.esfit",
+      "versionCode": 1
     },
     "web": {
       "favicon": "./assets/favicon.png"
