--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-version": "^4.0.0",
     "tailwindcss": "^3.3.2",
     "update": "^0.7.4"
   },
