correct pod file ot build ios native
Signed-off-by: natan borisov customer <natanborisovcustomer@natans-MBP.lan>

--- a/app.json
+++ b/app.json
@@ -16,7 +16,8 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "buildNumber": "1"
+      "buildNumber": "1",
+      "bundleIdentifier": "com.ellaschwager.esfit"
     },
     "android": {
       "adaptiveIcon": {
