--- a/ios/EllaSchwager/Info.plist
+++ b/ios/EllaSchwager/Info.plist
@@ -27,7 +27,7 @@
       <dict>
         <key>CFBundleURLSchemes</key>
         <array>
-          <string>com.anonymous.app-ui</string>
+          <string>com.ellaschwager.esfit</string>
         </array>
       </dict>
     </array>
