--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,3 +1,5 @@
+use_modular_headers!
+use_frameworks!
 require File.join(File.dirname(`node --print "require.resolve('expo/package.json')"`), "scripts/autolinking")
 require File.join(File.dirname(`node --print "require.resolve('react-native/package.json')"`), "scripts/react_native_pods")
 
@@ -27,7 +29,7 @@ self.define_singleton_method(use_autolinking_method_symbol) do |*args|
     origin_autolinking_method.call()
   end
 end
-min_ios_versions_supported = '13.0'
+
 platform :ios, podfile_properties['ios.deploymentTarget'] || '13.4'
 install! 'cocoapods',
   :deterministic_uuids => false
@@ -40,7 +42,6 @@ target 'EllaSchwager' do
 
   use_frameworks! :linkage => podfile_properties['ios.useFrameworks'].to_sym if podfile_properties['ios.useFrameworks']
   use_frameworks! :linkage => ENV['USE_FRAMEWORKS'].to_sym if ENV['USE_FRAMEWORKS']
-  use_frameworks! :linkage => :static
 
   use_react_native!(
     :path => config[:reactNativePath],
