--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.4.1",
+    "@revenuecat/purchases-capacitor": "^9.0.9",
     "expo": "^51.0.39",
     "expo-av": "~14.0.7",
     "expo-linear-gradient": "~13.0.2",
@@ -26,8 +27,6 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "^2.21.2",
-    "react-native-purchases": "8.2.7",
-    "react-native-purchases-ui": "8.1.0",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
